alignment & bug fix

--- a/components/TodoList/todoList.module.scss
+++ b/components/TodoList/todoList.module.scss
@@ -7,9 +7,11 @@
 }
 
 .completed {
+  text-decoration: line-through;
 }
 
 .delete {
+  margin-left: 1rem;
 }
 
 .input {
