--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,2 @@
 @import "mixins";
-$color-primary: #0070f3;
-
+$color-primary: #5b75e2;
